--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav>
-    <header>
+    <header class="b-shadow" id="header-menu">
       <a href="#">Brand</a>
       <i class="fa fa-bars" id="navbar-toggler"></i>
     </header>
@@ -27,9 +27,18 @@
       </div>
     </div>
   </nav>
-  <header>
-    <h1>Navs</h1>
-  </header>
+  <main>
+    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias voluptates laborum maxime possimus blanditiis nostrum at ducimus nesciunt! Fugit, libero suscipit? Earum consequatur fugiat veniam impedit deserunt officiis et error?
+    Officia vel, eveniet optio dolore molestiae repellat beatae non laudantium obcaecati nemo rerum enim reprehenderit iure sit libero neque nostrum quae, magnam labore ratione soluta repellendus? Repellendus, cum! Asperiores, saepe?
+    Omnis consequuntur sed eveniet voluptate a eum unde possimus fuga itaque optio! Animi expedita voluptate iste soluta provident quam odio? Quam quos eius sed harum natus voluptatum cupiditate sunt quae.
+    Incidunt magnam accusamus commodi voluptates omnis atque ut recusandae consequatur, unde eum nobis excepturi ab odio laudantium eaque hic nemo impedit explicabo corporis sint praesentium facilis maxime. Ex, facere quia.
+    Rem, reiciendis nisi numquam id soluta asperiores incidunt maxime dolore corporis sit sapiente nulla sequi? In ab corporis aut architecto, atque dolore rerum, impedit porro numquam doloremque omnis voluptatem error?
+    Eligendi dicta voluptatibus hic veritatis sequi neque ad, tenetur velit qui odio delectus magnam rem quia itaque ipsam doloribus beatae nisi facere aut dolore, laudantium iure commodi quisquam! Hic, mollitia?
+    Consequatur ut blanditiis deleniti mollitia, inventore ratione explicabo quae adipisci natus omnis laudantium itaque ducimus aut nam quaerat quisquam dolor doloribus. Illum temporibus ab reprehenderit obcaecati quidem doloribus, illo vitae.
+    Officiis numquam magnam aliquam sapiente unde ut dignissimos, eligendi quia omnis voluptate alias qui consequatur. Aliquam quaerat rem eius, facere laboriosam nam porro, tempore accusantium blanditiis eveniet aliquid suscipit deleniti!
+    Beatae dolor voluptates sint. Ex unde soluta magni adipisci nesciunt similique? Praesentium maiores reprehenderit quas quasi, doloribus nemo? Molestias, error. Nostrum corporis quasi soluta non, incidunt enim explicabo porro a.
+    Maxime voluptas, labore, dolorem quis nihil quam nam sequi numquam, at impedit culpa pariatur itaque in error ex architecto quibusdam ipsum aliquid esse reprehenderit vel laudantium nesciunt suscipit. Fuga, laudantium!</h1>
+  </main>
 <script src="js/my-js.js"></script>
 </body>
 </html>
