Se termino el diseño responsivo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <nav>
-    <header class="b-shadow" id="header-menu">
+    <header id="header-menu">
       <a href="#">Brand</a>
-      <i class="fa fa-bars" id="navbar-toggler"></i>
+      <i class="fa fa-border fa-bars" id="navbar-toggler"></i>
     </header>
     <div id="nav-dropdown">
       <a href="#">Home</a>
