--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <header id="header-menu">
       <a href="#">Brand</a>
-      <i class="fa fa-border fa-bars" id="navbar-toggler"></i>
+      <i class="fa fa-bars" id="navbar-toggler"></i>
     </header>
     <div id="nav-dropdown">
       <a href="#">Home</a>
