v2 Nav + Main, Responsive.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
     </div>
   </nav>
   <main>
-    <h1>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque culpa voluptate, laboriosam necessitatibus ab iste pariatur nam dolore veritatis itaque saepe sunt ducimus nostrum tempora impedit natus provident nihil dolor!
-      Quibusdam repellat doloribus est tempore dolore deserunt cupiditate ut iste praesentium. Omnis, dolorem enim. Fugiat aperiam repellat quod, qui cumque fugit ut molestiae obcaecati similique. Provident magni odit ab repellendus!
-      A excepturi eum eos. Quae natus error, quaerat molestiae corporis quam est aut, aperiam cumque cum nesciunt harum nostrum debitis suscipit nam totam accusamus ad reprehenderit placeat necessitatibus id unde.
-      Consectetur officia unde possimus voluptatem! Minima quos beatae odio quisquam soluta esse, eligendi voluptatum doloremque mollitia voluptas blanditiis sint, aliquid numquam voluptatibus odit iste, sequi expedita recusandae laudantium vel ullam?
-      Voluptate error repellat labore, saepe maiores architecto nesciunt earum esse voluptatibus in laudantium ipsum voluptatem, sed amet consequuntur exercitationem alias consequatur quidem optio hic? Corporis eligendi dolores eaque debitis possimus.
-    </h1>
+    <div>
+      <h1>Lorem ipsum dolor sit amet</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, debitis! Facilis cumque magnam nobis temporibus? Sit, expedita nobis.</p>
+      <button>Lorem ipsum <i class="fa fa-heart" aria-hidden="true"></i></button>
+    </div>
   </main>
 <script src="js/my-js.js"></script>
 </body>
